--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@
 language: bash
 install:
   - git clone https://github.com/sstephenson/bats.git
-  - export PATH=$PWD/bats/bin:$PATH
+  - export PATH=$PWD/bin:$PWD/bats/bin:$PATH
 script:
   - bats spec
