--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 ---
 language: bash
 install:
-  - git clone https://github.com/sstephenson/bats.git
-  - export PATH=$PWD/bin:$PWD/bats/bin:$PATH
+  - bash <(curl -L https://github.com/vinsonchuong/bash-common-bundle-dependencies/raw/master/bin/bundle-dependencies)
+  - export PATH=$PWD/bin:$PWD/packages/bin:$PATH
 script:
   - bats spec
