Revert "Remove unnecessary PATH addition"
This reverts commit 64ea4e6b828ee9ff4ab39f1d28809722fd61dd2d.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@
 language: bash
 install:
   - bash <(curl -L https://github.com/vinsonchuong/bash-common-bundle-dependencies/raw/master/bin/bundle-dependencies)
-  - export PATH=$PWD/packages/bin:$PATH
+  - export PATH=$PWD/bin:$PWD/packages/bin:$PATH
 script:
   - bats spec
